# pyhees-jjj

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.amazonq/: AGENTS.md
.amazonq/rules/: prefs-testcode.md
.devcontainer/: README.md  devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: action.yaml  turn-off-logger.sh
.idx/: dev.nix  ruff-0.10.0.nix
.kiro/: README.md  schedule-2025.md
.kiro/documenting/: presentation.md  spec.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
src/jjjexperiment/: app_config.py  common.py  constants.py  denchu_1.py  di_container.py  helper.py  input.py  logger.py  main.py  options.py  result.py  section4_2.py  section4_2_a.py
src/jjjexperiment/ac_min_volume_input/: README.md  __init__.py  section4_2.py  section4_2_a.py
src/jjjexperiment/carryover_heat/: README.md  __init__.py  get_C.py  section4_2.py
src/jjjexperiment/denchu/: denchu_1.py  denchu_2.py  utils.py
src/jjjexperiment/inputs/: ArgCEntity.py  ArgHEntity.py  README.md  __init__.py  ac_quantity_entity.py  ac_quantity_service.py  ac_setting.py  app_config.py  climate_entity.py  climate_service.py  common.py  cooling.py  di_container.py  environment_entity.py  environment_service.py  heating.py  input.py  input_dto.py  options.py
src/jjjexperiment/latent_load/: section4_2_a.py
src/jjjexperiment/underfloor_ac/: __init__.py  section3_1_e.py  section4_2.py  section4_2_f40.py  section4_2_f46_f48.py  section4_2_f52.py
src/jjjexperiment/v_supply_cap/: cap_V_supply_d_t_i.py
src/logs/: README.md
src/pyhees/: section2_2.py  section3_1.py  section3_1_d.py  section3_1_e.py  section3_3.py  section4_1.py  section4_10.py  section4_1_a.py  section4_2.py  section4_2_a.py  section4_2_b.py  section4_3.py  section4_3_a.py  section4_5.py  section4_7.py  section4_7_l.py  section4_8.py  section4_8_a.py  section7_1.py  section7_1_c.py  section7_1_f.py  section7_1_g.py  section7_2.py  section7_3.py  section7_4.py  section7_5.py  section7_6_a.py  section7_6_a_3.py  section7_6_b.py  section7_6_c.py  section7_6_d.py  section8.py  section9_2.py  section9_3.py
src/test_utils/: input_sample_type1.json  input_sample_type2.json  input_sample_type3.json  input_sample_type4.json  input_sample_vsup_cap_logics.json  utils.py
src/tests/: conftest.py  test_carry_heat.py  test_denchu_01_unit.py  test_denchu_02_modeling.py  test_denchu_03_estimate.py  test_dicontainer.py  test_integration_execution.py  test_latent_load_01.py  test_ndarray_loop_logic.py  test_not_broken_type1.py  test_not_broken_type2.py
src/tests/carryover_heat/: test_4_2_formula_46_48.py  test_4_2_formula_8_9.py  test_get_C.py  test_theta_HBR_and_NR.py
(+29 files in other folders)
