[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyhees-jjj"
version = "0.1.0"
description = "Pyheesの検証用のフォークプロジェクトです"
homepage = "https://github.com/izumi-system-development/pyhees-jjj"
authors = ["Pyhees Development Team"]
license = "file:LICENSE"
readme = "src/jjjexperiment/README.md"
packages = [
    { include = "jjjexperiment", from = "src" },
    { include = "pyhees", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"  # 3.10.x (google colab に合わせる)
numpy = "~1.26"  # 1.26系の最新版
pandas = ">=2.0.1"
scipy = ">=1.10.1"
injector = "*"
nptyping = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
