[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyhees-jjj"
version = "0.1.1"
description = "Pyheesの検証用のフォークプロジェクトです"
homepage = "https://github.com/izumi-system-development/pyhees-jjj"
authors = ["Pyhees Development Team"]
license = "file:LICENSE"
readme = "src/jjjexperiment/README.md"
packages = [
    { include = "jjjexperiment", from = "src" },
    { include = "pyhees", from = "src" },
]

[tool.poetry.dependencies]
python = "~3.11"  # 3.11.x (= google colab ver.)
numpy = "1.26.4"  # 2.0系には nptyping が2025.3時点で未対応のため
pandas = ">=2.0.1"
scipy = ">=1.10.1"
injector = "*"
nptyping = "*"
pydantic = "^2.10.6"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:nptyping",
]
