[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyhees-jjj"
version = "0.1.1"
description = "Pyheesの検証用のフォークプロジェクトです"
homepage = "https://github.com/izumi-system-development/pyhees-jjj"
authors = ["Pyhees Development Team"]
license = "file:LICENSE"
readme = "src/jjjexperiment/README.md"
packages = [
    { include = "jjjexperiment", from = "src" },
    { include = "pyhees", from = "src" },
]

# 追加方法: poetry add numpy
# 削除方法: poetry remove numpy
[tool.poetry.dependencies]
python = ">=3.12.11,<3.13"  # 3.12.11+ (= google colab ver.)
numpy = "~2.0"  # 2.0.x (= google colab ver.)
pandas = ">=2.0.1"
scipy = ">=1.10.1"
injector = "*"
pydantic = "^2.10.6"
pyyaml = "^6.0.2"

# 追加方法: poetry add --group dev pytest
[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
